--- a/index.html
+++ b/index.html
@@ -19,19 +19,16 @@
         #reels-container {
             width: 100%;
             height: 100vh;
-            display: flex;
-            flex-direction: column;
-            overflow-y: scroll;
-            scroll-snap-type: y mandatory;
-            -webkit-overflow-scrolling: touch;
+            overflow: hidden; /* Prevent unintended scrolling */
+            position: relative;
         }
 
         .video-container {
-            position: relative;
+            position: absolute;
             width: 100%;
             height: 100vh;
-            scroll-snap-align: start;
-            flex-shrink: 0;
+            top: 0;
+            left: 0;
             background-color: #000;
         }
 
@@ -156,6 +153,7 @@
         let allReels = [];
         let currentIndex = 0;
         let touchStartY = 0;
+        let isTransitioning = false;
 
         const urlParams = new URLSearchParams(window.location.search);
         const initialReelId = urlParams.get('reelId') || null;
@@ -312,64 +310,58 @@
                 const reel = allReels[currentIndex];
                 const videoElement = createVideoElement(reel, currentIndex);
                 container.appendChild(videoElement);
-
-                // Add a placeholder for smooth scrolling
-                const placeholder = document.createElement('div');
-                placeholder.className = 'video-container';
-                container.appendChild(placeholder);
+                window.history.pushState({}, document.title, `/Instagram/?reelId=${reel.reelId}`);
             }
 
             function enableScrollPlayback() {
-                let lastScrollTop = 0;
-                let isScrolling = false;
+                let touchStartY = 0;
+                let touchMoveY = 0;
 
-                container.addEventListener('scroll', () => {
-                    if (isScrolling) return;
-                    const scrollTop = container.scrollTop;
-                    const direction = scrollTop > lastScrollTop ? 'down' : 'up';
-                    lastScrollTop = scrollTop;
+                container.addEventListener('touchstart', (e) => {
+                    touchStartY = e.touches[0].clientY;
+                    touchMoveY = touchStartY;
+                });
 
-                    if (direction === 'down' && scrollTop >= window.innerHeight * 0.7 && currentIndex < allReels.length - 1) {
-                        isScrolling = true;
+                container.addEventListener('touchmove', (e) => {
+                    touchMoveY = e.touches[0].clientY;
+                });
+
+                container.addEventListener('touchend', (e) => {
+                    if (isTransitioning) return;
+                    const touchEndY = e.changedTouches[0].clientY;
+                    const swipeDistance = touchStartY - touchEndY;
+
+                    if (swipeDistance > 50 && currentIndex < allReels.length - 1) { // Swipe up
+                        isTransitioning = true;
                         currentIndex++;
                         loadCurrentReel().then(() => {
-                            container.scrollTo({ top: 0, behavior: 'auto' });
-                            window.history.pushState({}, document.title, `/Instagram/?reelId=${allReels[currentIndex].reelId}`);
-                            isScrolling = false;
+                            isTransitioning = false;
                         });
-                    } else if (direction === 'up' && scrollTop <= window.innerHeight * 0.3 && currentIndex > 0) {
-                        isScrolling = true;
+                    } else if (swipeDistance < -50 && currentIndex > 0) { // Swipe down
+                        isTransitioning = true;
                         currentIndex--;
                         loadCurrentReel().then(() => {
-                            container.scrollTo({ top: 0, behavior: 'auto' });
-                            window.history.pushState({}, document.title, `/Instagram/?reelId=${allReels[currentIndex].reelId}`);
-                            isScrolling = false;
+                            isTransitioning = false;
                         });
                     }
                 });
 
-                container.addEventListener('touchstart', (e) => {
-                    touchStartY = e.touches[0].clientY;
-                });
+                // Mouse wheel support for desktop testing
+                container.addEventListener('wheel', (e) => {
+                    if (isTransitioning) return;
+                    e.preventDefault();
 
-                container.addEventListener('touchend', (e) => {
-                    const touchEndY = e.changedTouches[0].clientY;
-                    const swipeDistance = touchStartY - touchEndY;
-                    if (swipeDistance > 50 && currentIndex < allReels.length - 1) {
-                        isScrolling = true;
+                    if (e.deltaY > 0 && currentIndex < allReels.length - 1) { // Scroll down
+                        isTransitioning = true;
                         currentIndex++;
                         loadCurrentReel().then(() => {
-                            container.scrollTo({ top: 0, behavior: 'auto' });
-                            window.history.pushState({}, document.title, `/Instagram/?reelId=${allReels[currentIndex].reelId}`);
-                            isScrolling = false;
+                            isTransitioning = false;
                         });
-                    } else if (swipeDistance < -50 && currentIndex > 0) {
-                        isScrolling = true;
+                    } else if (e.deltaY < 0 && currentIndex > 0) { // Scroll up
+                        isTransitioning = true;
                         currentIndex--;
                         loadCurrentReel().then(() => {
-                            container.scrollTo({ top: 0, behavior: 'auto' });
-                            window.history.pushState({}, document.title, `/Instagram/?reelId=${allReels[currentIndex].reelId}`);
-                            isScrolling = false;
+                            isTransitioning = false;
                         });
                     }
                 });
@@ -400,4 +392,4 @@
         initialize();
     </script>
 </body>
-</html
+</html>
