--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             object-fit: cover;
             display: block;
             background-color: #000;
-            pointer-events: none; /* Prevents direct video interaction */
+            pointer-events: none;
         }
 
         .video-loader {
@@ -69,7 +69,6 @@
             align-items: center;
             padding: 10px;
             background: transparent;
-            pointer-events: none; /* Prevents interaction */
         }
 
         .profile-pic {
@@ -78,11 +77,15 @@
             object-fit: cover;
             border-radius: 50%;
             border: 2px solid white;
+            cursor: pointer;
+            pointer-events: auto; /* Enable click */
         }
 
         .user-info {
             margin-left: 10px;
             color: white;
+            cursor: pointer;
+            pointer-events: auto; /* Enable click */
         }
 
         .username {
@@ -110,8 +113,7 @@
             background: transparent;
             border-radius: 8px;
             white-space: normal;
-            cursor: pointer;
-            pointer-events: none; /* Prevents interaction */
+            pointer-events: none;
         }
 
         .like-animation {
@@ -120,7 +122,7 @@
             height: 150px;
             opacity: 0;
             transform: scale(0.5);
-            animation: likePop 0.4s ease-out forwards; /* Reduced time */
+            animation: likePop 0.4s ease-out forwards;
             z-index: 12;
         }
 
@@ -141,14 +143,13 @@
             cursor: pointer;
         }
 
-        /* Disable context menu and drag */
         body {
             -webkit-touch-callout: none;
             -webkit-user-drag: none;
         }
     </style>
 </head>
-<body oncontextmenu="return false;"> <!-- Disable right-click -->
+<body oncontextmenu="return false;">
     <div id="reels-container"></div>
     
     <div class="fixed-overlay">
@@ -172,7 +173,8 @@
         let touchStartY = 0;
         let isTransitioning = false;
         let currentVideo = null;
-        let isFirstVideo = true;
+        let isFirstVideo = localStorage.getItem('firstVideoPlayed') !== 'true'; // Persist across refresh
+        let holdTimer = null;
 
         const urlParams = new URLSearchParams(window.location.search);
         const initialReelId = urlParams.get('reelId') || null;
@@ -180,6 +182,7 @@
         const container = document.getElementById('reels-container');
         const profilePic = document.getElementById('profile-pic');
         const usernameText = document.getElementById('username-text');
+        const usernameContainer = document.getElementById('username');
         const verifyBadge = document.getElementById('verify-badge');
         const title = document.getElementById('title');
 
@@ -317,6 +320,8 @@
                 profilePic.src = profileData.profile || "https://i.postimg.cc/3Rh3SjRb/image.jpg";
                 usernameText.innerText = profileData.username;
                 verifyBadge.style.display = profileData.verified ? "inline" : "none";
+                profilePic.dataset.id = reel.id; // Store ID for click
+                usernameContainer.dataset.id = reel.id; // Store ID for click
             }
 
             async function loadCurrentReel() {
@@ -344,7 +349,10 @@
                     touchStartY = e.touches[0].clientY;
                     touchMoveY = touchStartY;
                     isHolding = true;
-                    if (currentVideo) currentVideo.pause();
+                    clearTimeout(holdTimer);
+                    holdTimer = setTimeout(() => {
+                        if (isHolding && currentVideo) currentVideo.pause();
+                    }, 1500); // 1.5 seconds
                 });
 
                 container.addEventListener('touchmove', (e) => {
@@ -356,15 +364,16 @@
                     const touchEndY = e.changedTouches[0].clientY;
                     const swipeDistance = touchStartY - touchEndY;
 
-                    if (isHolding && Math.abs(swipeDistance) < 50) {
-                        if (currentVideo) currentVideo.play().catch(() => {});
-                    } else if (swipeDistance > 50 && currentIndex < allReels.length - 1) { // Swipe up
+                    clearTimeout(holdTimer);
+                    if (isHolding && Math.abs(swipeDistance) < 50 && currentVideo) {
+                        currentVideo.play().catch(() => {});
+                    } else if (swipeDistance > 50 && currentIndex < allReels.length - 1) {
                         isTransitioning = true;
                         currentIndex++;
                         loadCurrentReel().then(() => {
                             isTransitioning = false;
                         });
-                    } else if (swipeDistance < -50 && currentIndex > 0) { // Swipe down
+                    } else if (swipeDistance < -50 && currentIndex > 0) {
                         isTransitioning = true;
                         currentIndex--;
                         loadCurrentReel().then(() => {
@@ -375,29 +384,32 @@
                 });
 
                 container.addEventListener('mousedown', (e) => {
-                    if (e.button === 0) { // Left click
+                    if (e.button === 0) {
                         isHolding = true;
-                        if (currentVideo) currentVideo.pause();
+                        clearTimeout(holdTimer);
+                        holdTimer = setTimeout(() => {
+                            if (isHolding && currentVideo) currentVideo.pause();
+                        }, 1500); // 1.5 seconds
                     }
                 });
 
                 container.addEventListener('mouseup', (e) => {
                     if (isHolding && e.button === 0) {
+                        clearTimeout(holdTimer);
                         if (currentVideo) currentVideo.play().catch(() => {});
                         isHolding = false;
                     }
                 });
 
                 container.addEventListener('click', (e) => {
-                    if (isFirstVideo) {
-                        if (currentVideo) {
-                            currentVideo.play().catch(() => {});
-                            isFirstVideo = false;
-                            if (!isAudioEnabled) {
-                                isAudioEnabled = true;
-                                setAudioPersistence();
-                                currentVideo.muted = false;
-                            }
+                    if (isFirstVideo && currentVideo) {
+                        currentVideo.play().catch(() => {});
+                        isFirstVideo = false;
+                        localStorage.setItem('firstVideoPlayed', 'true'); // Persist
+                        if (!isAudioEnabled) {
+                            isAudioEnabled = true;
+                            setAudioPersistence();
+                            currentVideo.muted = false;
                         }
                     }
                 });
@@ -410,19 +422,29 @@
                     if (isTransitioning) return;
                     e.preventDefault();
 
-                    if (e.deltaY > 0 && currentIndex < allReels.length - 1) { // Scroll down
+                    if (e.deltaY > 0 && currentIndex < allReels.length - 1) {
                         isTransitioning = true;
                         currentIndex++;
                         loadCurrentReel().then(() => {
                             isTransitioning = false;
                         });
-                    } else if (e.deltaY < 0 && currentIndex > 0) { // Scroll up
+                    } else if (e.deltaY < 0 && currentIndex > 0) {
                         isTransitioning = true;
                         currentIndex--;
                         loadCurrentReel().then(() => {
                             isTransitioning = false;
                         });
                     }
+                });
+
+                profilePic.addEventListener('click', () => {
+                    const profileId = profilePic.dataset.id;
+                    window.open(`profiles.html?id=${profileId}`, '_blank');
+                });
+
+                usernameContainer.addEventListener('click', () => {
+                    const profileId = usernameContainer.dataset.id;
+                    window.open(`profiles.html?id=${profileId}`, '_blank');
                 });
             }
 
@@ -437,7 +459,7 @@
                 heart.style.left = `${event.clientX - 75}px`;
                 heart.style.top = `${event.clientY - 75}px`;
                 container.appendChild(heart);
-                setTimeout(() => container.removeChild(heart), 400); // Match animation time
+                setTimeout(() => container.removeChild(heart), 400);
             }
 
             loadCurrentReel().then(() => enableScrollPlayback());
